Thesis: finish introduction

--- a/tex/references.bib
+++ b/tex/references.bib
@@ -7,11 +7,22 @@
   pages = {25--41},
 }
 @book{DrydenMardia2016,
-  author = {I. L. {Dryden} and K. V. {Madria}},
+  author = {I. L. {Dryden} and K. V. {Mardia}},
   title = {Statistical Shape Analysis with Applications in R},
   publisher = {John Wiley and Sons Ltd},
   edition = 2,
   year = 2016,
+}
+@article{Kendall1977, 
+    author={Kendall, D. G.}, 
+    title={The diffusion of shape},
+    year={1977}, 
+    journal={Advances in Applied Probability}, 
+    volume={9}, 
+    number={3}, 
+    DOI={10.2307/1426091}, 
+    publisher={Cambridge University Press}, 
+    pages={428–430}
 }
 @book{FahrmeierEtAl2013,
   author = {F. {Ludwig} and T. {Kneib} and S. {Lang} and B. {Marx}},
@@ -21,7 +32,7 @@
   publisher = {Springer},
   location = {Berlin, Heidelberg},
 }
-@article{SrivastaEtAl2011,
+@article{SrivastavaEtAl2011,
   author = {A. {Srivastava} and E. P. {Klassen} and S. H. {Joshi} and I. H. {Jermyn}},
   title = {Shape Analysis of Elastic Curves in Euclidean Spaces},
   journal={IEEE Transactions on Pattern Analysis and Machine Intelligence}, 
