--- a/tex/report.tex
+++ b/tex/report.tex
@@ -7,17 +7,18 @@
 \setstretch{1.5} % Zeilenabstand definieren
 % Language and fonts
 \usepackage[utf8]{inputenc} % Allows Umlauts
+\usepackage[osf,sc]{mathpazo} % Use the Palatino font
 \usepackage[T1]{fontenc} % western enc. Improves wordsplitting
 \usepackage[english]{babel} % Set language
 \usepackage[tracking=true]{microtype} % Slightly tweak font spacing for aesthetics
 \DeclareMicrotypeSet*[tracking]{my}% Anleitung lesen um das zu verstehen.
   { font = */*/*/sc/* }%
 \SetTracking{ encoding = *, shape = sc }{ 45 }%
-\usepackage[osf,sc]{mathpazo} % Use the Palatino font
 \usepackage{ellipsis} % Slightly tweak spacing for \dots
 % Math fonts and symbols
 \usepackage{mathtools}
 \usepackage{bm} % For bolding mathsymbols and letters
+\usepackage{amssymb}
 % Additional formating (optional)
 \usepackage[bf]{titlesec}
 \usepackage[margin=15pt,hang,small,labelfont={bf,sf},up,up]{caption} % Custom captions 
@@ -34,7 +35,7 @@
 \setlength{\heavyrulewidth}{1.5pt}
 \setlength{\abovetopsep}{4pt}
 % Additional packages
-\usepackage[hidelinks]{hyperref} % For hyperlinks in the PDF
+\usepackage{hyperref} % For hyperlinks in the PDF
 \usepackage{tikz}
 \usepackage{import}
 \usepackage{enumitem} 
@@ -46,11 +47,25 @@
 \usepackage{transparent}
 \usepackage{comment}
 \usepackage{tcolorbox}
-\usepackage{latex-tools}
+\usepackage{amsthm}
+\usepackage{mdframed}
 
 % Shortcuts/Definitions
 \DeclareMathOperator*{\argmin}{argmin}   % Jan Hlavacek
 \DeclareMathOperator*{\argmax}{argmax}   % Jan Hlavacek
+\DeclareMathOperator*{\arginf}{arginf}   % Jan Hlavacek
+
+% Theorems and Definitions
+\mdfdefinestyle{definitionstyle}{%
+  linewidth=1pt,%
+  innertopmargin=0pt
+}
+\theoremstyle{plain}
+\mdtheorem{theorem}{Theorem}[section]
+\mdtheorem{corollary}{Corollary}[theorem]
+\mdtheorem{lemma}[theorem]{Lemma}
+\newmdtheoremenv[style=definitionstyle]{definition}[theorem]{Definition} % definition numbers depend on lemma nbrs
+
 
 % Extra settings
 \allowdisplaybreaks
@@ -63,11 +78,13 @@
 
 \begin{titlepage}
 
+  \vspace*{0.5cm}
+
   \begin{center}
     {\LARGE\textbf{Elastic Full Procrustes Means for Sparse and\vspace{0.4cm}\\
     Irregular Planar Curves}}
   \vspace{1cm}\\
-  {\large Masters Thesis}
+    {\large Masters Thesis}
   \vspace{0.7cm}\\
   \textsc{Manuel Pfeuffer\footnote{\url{pfeuferm@hu-berlin.de}, Matriculation Number: 577668}}
   \vspace{0.1cm}\\
@@ -77,7 +94,9 @@
   \vfill
   \end{center}
 
-  \noindent \textbf{Advisors:} Prof.\ Sonja Greven, Lisa Maike Steyer, Almond Stöcker
+  \noindent \textbf{Advisors:} Lisa Maike Steyer, Almond Stöcker\\
+  \noindent \textbf{1st Examiner:} Prof.\ Dr.\ Sonja Greven\\
+  \noindent \textbf{2nd Examiner:} Prof.\ Dr.\ Nadja Klein
   \vspace{0.5em}
 
 \end{titlepage}
@@ -87,21 +106,41 @@
 \newpage
 
 
-\section{Math-Basics Recap}
+\section{Introduction}
 \label{sec:intro}
 \input{sections/1-introduction}
 
+\section{Functional and Shape Data Analysis}
+\label{sec:theo}
+\input{sections/2-function_shape_analysis}
 
-\section{The Full Procrustes Mean for Planar Curves}
-\label{sec:proc2d}
-\input{sections/2-procrustes_mean}
+\section{The Elastic Full Procrustes Means for Planar Curves}
+\label{sec:mean}
+\input{sections/3-elastic_proc2d_mean}
 
+\section{Estimation Strategy}
+\label{sec:algo}
+
+\section{Empirical Application}
+\label{sec:app}
+
+\section{Outlook}
+\label{sec:outl}
+
+\section{Summary}
+\label{sec:sum}
 
 \appendix
 \newpage
-\section{Additional Derivations}
+\section{Derivations and Proofs}
 \label{app:deriv}
 \input{sections/a-derivations}
+\newpage
+\section{Supplementary Materials}
+\label{app:deriv}
+\input{sections/b-supplements}
+\newpage
+\input{sections/c-discards}
 
 
 \newpage
