--- a/tex/references.bib
+++ b/tex/references.bib
@@ -48,3 +48,9 @@
   publisher = {Springer},
   location = {New York}
 }
+@article{Steyer2021,
+  author = {L. {Steyer} and A. {Stöcker} and S. {Greven}},
+  title = {Elastic Analysis of Irregularly or Sparsely Sampled Curves},
+  year = 2021,
+  note = {Preprint}
+}
