--- a/tex/report.tex
+++ b/tex/report.tex
@@ -110,7 +110,7 @@
 \label{sec:intro}
 \input{sections/1-introduction}
 
-\section{Functional and Shape Data Analysis}
+\section{Functional and Shape Data Analysis of Planar Curves}
 \label{sec:theo}
 \input{sections/2-function_shape_analysis}
 
